2008-01-02	Mike Massonnet <mmassonnet@xfce.org>

This is the second part of the rewrite that introduces the storage of an image
inside the panel plugin.  This part already marks the end of David's work.
Thank you for putting your efforts into this plugin.

	- Introduce a single pixbuf storage inside the plugin

2008-12-31	Mike Massonnet <mmassonnet@xfce.org>

This is the first part of the rewrite to make it more userfriendly, work done
by David Collins.  The patches are applied as-is until his work is clearly done
to avoid merge processes during that time.

	- Drop the behaviors NORMAL and STRICTLY
	- Drop PREVENTEMPTY which will be the case by default
	- Replace IGNORESELECT against ADDSELECT to avoid double negation reads
	in the code
	- New definitions ClipDataType and ClipMenuFormat
	- Keep an index of the latest clipboard in the plugin struct for easier
	find on menu item clicks
	- Display always one list in the menu, thus merge the functions
	clipman_clicked_separated and not_separated
	- The clipboards are checked out on events with the owner-change signal
	from the GtkClipboards classes

2008-12-27	Mike Massonnet <mmassonnet@xfce.org>

	* panel-plugin/clipman.c (clipman_check): Don't restore the clipboard 
	  if it actually contains an image (patch from David Collins)

2008-09-21	Mike Massonnet <mmassonnet@xfce.org>

	* Fix build for libtool 2.2 (or at least for ArchLinux)

2008-03-04	Mike Massonnet <mmassonnet@xfce.org>

	* === Release 0.8.1 ===
	* INSTALL: Delete autogenerate file
	* COPYING: Fix licence to GPL2 as it is the case for the c sources
	* configure.in.in: Bump minimum Xfce versions to 4.4.0
	* panel-plugin/clipman.c:
	  - (clipman_create_title) Generate fine UTF-8 titles with ellipsis (bug #3304)
	  - (clipman_create_menuitem) Use gtk_menu_item_new_with_label which
	  aligns the label on the left by default

2006-01-17	Nick Schermer <nick@xfce.org>

	* Improve configure files and Makefiles.